Qualitygates as object array
